fixed spacing

--- a/main.scss
+++ b/main.scss
@@ -101,8 +101,12 @@ body {
       display: inline-block;
     }
 
-    #yena:hover{
+    #yena:hover {
       text-decoration: line-through;
+    }
+
+    .todo {
+      margin-left: 11vw;
     }
 
   }
